<resources>
    <string name="app_name">Note</string>
    <string name="how_about_you_today">How about you today?</string>
    <string name="language">Language</string>
    <string name="feeling">Feeling</string>
    <string name="enter_title_here">Enter title here</string>
    <string name="enter_text_here">Enter text here</string>
    <string name="wait">Wait!</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete?</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="permission">Permission</string>
    <string name="permission_message">
        <![CDATA[
            Please grant the "<b>Access Photos Permission</b>" to use the app properly
        ]]>
    </string>
    <string name="access_photos_permission">Access Photos Permission</string>
    <string name="permission_not_allowed">Permission not allowed.</string>
    <string name="permission_allowed">Permission allowed.</string>
    <string name="done">Done</string>
    <string name="save">Save</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="spanish">Spanish</string>
    <string name="french">French</string>
    <string name="arabic">Arabic</string>
    <string name="bengali">Bengali</string>
    <string name="oops_the_diary_is_blank">Oops, the diary is blank!</string>
    <string name="select_date">Select date</string>
    <string name="delete_note_success">Delete note success</string>
    <string name="fill_title_or_content_at_least">Fill title or content at least</string>
    <string name="you_added_a_new_note">You added a new note</string>
    <string name="updated_success">Updated success</string>
</resources>