<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/delete_dialog_background"
    android:layout_marginHorizontal="32dp">

    <ImageView
        android:id="@+id/iconImageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:contentDescription="delete"
        android:src="@drawable/ic_backgrounded_trash" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wait"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/mplusrounded1c"
        android:textColor="#384250"/>

    <TextView
        android:id="@+id/messageTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure_you_want_to_delete"
        android:gravity="center"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/mplusrounded1c"
        android:textColor="#6C737F"/>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="#D2D6DB"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/mplusrounded1c"
            android:textSize="16sp"
            android:textFontWeight="600"/>

        <Button
            android:id="@+id/deleteConfirmButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textColor="@color/primary_300"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/mplusrounded1c"
            android:textSize="16sp"
            android:textFontWeight="600"/>
    </LinearLayout>
</LinearLayout>
