<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PermissionActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:src="@drawable/ic_back"
            android:contentDescription="back"
            android:background="?attr/selectableItemBackgroundBorderless"/>

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/permission"
            android:textSize="18sp"
            android:textFontWeight="700"
            android:fontFamily="@font/mplusrounded1c"
            android:layout_centerInParent="true"
            android:textColor="#56302A"/>
    </RelativeLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/couple_is_enjoying_online_dating"/>

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:paddingHorizontal="36dp"
        android:textAlignment="center"
        android:fontFamily="@font/mplusrounded1c"
        android:textSize="16sp"
        android:layout_marginBottom="24dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:background="@drawable/rounded_background"
        android:layout_marginHorizontal="16dp"
        android:elevation="3dp"
        android:paddingHorizontal="12dp"
        android:layout_marginBottom="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_image"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/access_photos_permission"
            android:layout_marginHorizontal="12dp"
            android:textSize="16sp"
            android:fontFamily="@font/mplusrounded1c"
            android:layout_weight="1"
            android:textColor="#384250"/>

        <Switch
            android:id="@+id/permissionSwitch"
            android:layout_width="50dp"
            android:layout_height="50dp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </LinearLayout>

    <TextView
        android:id="@+id/messageTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/permission_not_allowed"
        android:layout_marginHorizontal="16dp"
        android:textSize="12sp"
        android:fontFamily="@font/mplusrounded1c"
        android:textColor="@color/error_color"/>

    <Button
        android:id="@+id/continueButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Continue"
        android:layout_marginHorizontal="16sp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/primary_300"
        android:fontFamily="@font/mplusrounded1c"
        android:textSize="16sp"
        android:textFontWeight="600"
        android:visibility="invisible"/>
</LinearLayout>