<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.create.CreateOrEditActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/backButton"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:src="@drawable/ic_back"
                    android:contentDescription="back"
                    android:background="?attr/selectableItemBackgroundBorderless"/>

                <LinearLayout
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="56dp"
                    android:layout_centerInParent="true"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/dateTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Tues, July 16 "
                        android:textSize="16sp"
                        android:textFontWeight="600"
                        android:fontFamily="@font/mplusrounded1c"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_down" />
                </LinearLayout>

                <ImageButton
                    android:id="@+id/imageLibraryButton"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:src="@drawable/ic_image_library"
                    android:contentDescription="images"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/noteBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/note_background"
                android:layout_marginBottom="16dp"
                android:paddingVertical="60dp"
                android:paddingHorizontal="30dp"
                android:orientation="vertical"
                android:translationY="-20dp"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <EditText
                    android:id="@+id/titleEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"
                    android:hint="@string/enter_title_here"
                    android:textSize="18sp"
                    android:textFontWeight="700"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/mplusrounded1c"
                    android:textColor="#56302A"
                    android:layout_marginTop="8dp">

                </EditText>

                <EditText
                    android:id="@+id/contentEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="300dp"
                    android:inputType="textMultiLine"
                    android:hint="@string/enter_text_here"
                    android:textSize="14sp"
                    android:maxLines="15"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/mplusrounded1c"
                    android:gravity="left"
                    android:layout_marginTop="8dp"/>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/imagesRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/create_image_item"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/feeling"
                android:textSize="18sp"
                android:textFontWeight="700"
                android:fontFamily="@font/mplusrounded1c"
                android:layout_marginBottom="16dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/feelingRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp"/>

            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:backgroundTint="@color/primary_300"
                android:fontFamily="@font/mplusrounded1c"
                android:textSize="16sp"
                android:textFontWeight="600"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>

