<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    tools:context=".ui.detail.DetailActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/backButton"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:src="@drawable/ic_back"
                    android:contentDescription="back"
                    android:background="?attr/selectableItemBackgroundBorderless"/>

                <LinearLayout
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="56dp"
                    android:layout_centerInParent="true"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/dateTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Tues, July 16 "
                        android:textSize="16sp"
                        android:textFontWeight="600"
                        android:fontFamily="@font/mplusrounded1c"/>
                </LinearLayout>

                <ImageButton
                    android:id="@+id/editButton"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:src="@drawable/ic_edit"
                    android:contentDescription="images"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:layout_toStartOf="@id/deleteButton"
                    android:translationX="16dp"/>

                <ImageButton
                    android:id="@+id/deleteButton"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:src="@drawable/ic_trash"
                    android:contentDescription="images"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/note_background"
                android:layout_marginBottom="16dp"
                android:paddingVertical="60dp"
                android:paddingStart="30dp"
                android:paddingEnd="40dp"
                android:orientation="vertical"
                android:translationY="-20dp">

                <EditText
                    android:id="@+id/titleEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/enter_title_here"
                    android:textSize="18sp"
                    android:textFontWeight="700"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/mplusrounded1c"
                    android:textColor="#56302A"
                    android:enabled="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:textIsSelectable="true"
                    android:layout_marginTop="8dp"/>

                <EditText
                    android:id="@+id/contentEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:enabled="false"
                    android:fontFamily="@font/mplusrounded1c"
                    android:hint="@string/enter_text_here"
                    android:inputType="textMultiLine"
                    android:justificationMode="inter_word"
                    android:maxLines="15"
                    android:textSize="14sp"
                    android:textColor="#56302A"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:textIsSelectable="true"
                    android:layout_marginTop="8dp"/>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/imagesRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/create_image_item"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp" />

            <TextView
                android:id="@+id/feelingTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/feeling"
                android:textSize="18sp"
                android:textFontWeight="700"
                android:fontFamily="@font/mplusrounded1c"
                android:layout_marginBottom="16dp"/>

            <ImageView
                android:id="@+id/feelingImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>

